# HaxballGym

./: .gitignore  AGENTS.md  ARCHITECTURE.md  CURRENT_GOALS.md  IMPROVEMENT_PLAN.md  LICENSE  Makefile  NEXT_ITERATION.md  README.md  RELEASING.md  example.py  pyproject.toml  setup.py
.cursor/rules/: codebase-instructions.mdc
.github/workflows/: ci.yml  release.yml
docs/: HOW_TO.md
docs/design-docs/: env-api.md  index.md
docs/exec-plans/active/: next-iteration.md
docs/references/: codex-harness-engineering.md
haxballgym/: README.md  gym.py  make.py  pyproject.toml  version.py
haxballgym/envs/: __init__.py  environment.py  match.py
haxballgym/game/: common_values.py  game.py  pygame_stadium.py  recording_reader.py  ursina_stadium.py
haxballgym/game/modules/: __init__.py
haxballgym/game/modules/game/: __init__.py  game_recorder.py  game_renderer.py  game_score.py
haxballgym/game/modules/physics/: __init__.py  physics_handler.py
haxballgym/game/modules/player/: __init__.py  player_data.py  player_handler.py
haxballgym/game/objects/: __init__.py  stadium_object.py
haxballgym/game/objects/base/: __init__.py  background_object.py  ball_physics.py  disc_object.py  goal_object.py  physics_object.py  plane_object.py  player_physics.py  segment_object.py  trait_object.py  vertex_object.py
haxballgym/game/physics/: __init__.py  game.py  game_recorder.py  game_score.py  physics_handler.py  player_handler.py
haxballgym/game/stadiums/: big.hbs  classic.hbs  futsal-big.hbs  futsal-classic.hbs  obstacle-challenge.hbs  penalty-soccer.hbs
haxballgym/haxballgym/: __init__.py  action.py  done.py  engine.py  env.py  mutator.py  obs.py  replays.py  reward.py  stadium.py  state.py
haxballgym/haxballgym/stadiums/: big-easy.hbs  big-hockey.hbs  big-rounded.hbs  big.hbs  classic.hbs  easy.hbs  futsal-classic.hbs  hockey.hbs  huge.hbs  rounded.hbs  small.hbs
haxballgym/tests/: test_env.py  test_parity.py  test_real_engine.py  test_stadium_geometry.py  test_stadium_loader.py
haxballgym/tests/fixtures/: nh_ball_trajectories.json
haxballgym/utils/: common_values.py
haxballgym/utils/action_parsers/: __init__.py  action_parser.py  default_act.py  discrete_act.py
haxballgym/utils/gamestates/: __init__.py  game_state.py  physics_object.py  player_data.py
haxballgym/utils/obs_builders/: __init__.py  default_obs.py  obs_builder.py
haxballgym/utils/reward_functions/: combined_reward.py  default_reward.py  reward_function.py  velocity_reward.py
haxballgym/utils/reward_functions/common_rewards/: __init__.py  conditional_rewards.py  misc_rewards.py
haxballgym/utils/state_setters/: __init__.py  default_state.py  random_state.py  state_setter.py
haxballgym/utils/state_setters/wrappers/: __init__.py  pawn_wrapper.py  physics_wrapper.py  state_wrapper.py
haxballgym/utils/terminal_conditions/: __init__.py  common_conditions.py  terminal_condition.py
headless-bot/: .gitignore  README.md  bot.js  export_policy.py  nh_oracle.js  package-lock.json  package.json  play.py
reverse-engineering/: README.md  game-min.js  headless.js  recording.js
rl/: .gitignore  README.md  bc_train.py  opponents.py  play.py  pyproject.toml  render.py  render_demo.py  replays.py  train.py  watch.py
rl/checkpoints/: meta.json  model.pt
rust/haxball_core/: .gitignore  Cargo.toml  LICENSE  README.md  bench.py  haxball_core.pyi  pyproject.toml
rust/haxball_core/src/: lib.rs  physics.rs  stadium.rs
rust/haxball_core/src/stadiums/: classic.hbs
rust/haxball_core/tests/: test_fidelity.py
