[project]
name = "haxballgym-workspace"
version = "1.0.0"
description = "Headless vectorized Haxball simulator for RL, plus training and in-browser play (uv workspace root)."
requires-python = ">=3.12"
dependencies = [
    "haxball-core",         # rust/haxball_core  — the physics engine
    "haxballgym",           # haxballgym/        — the composable env API
    "haxballgym-examples",  # rl/                — example train + play scripts
]

[tool.uv.workspace]
members = ["rust/haxball_core", "haxballgym", "rl"]

[tool.uv.sources]
haxball-core = { workspace = true }
haxballgym = { workspace = true }
haxballgym-examples = { workspace = true }

[dependency-groups]
dev = [
    "ruff>=0.15.17",
    "ty>=0.0.49",
]

[tool.ruff]
line-length = 110
target-version = "py312"
extend-exclude = [".venv", "rust/*/target"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
ignore = ["E741"]   # ambiguous var names (l/I) — fine in math code

[tool.ty.environment]
python-version = "3.12"

[tool.uv]
package = false         # the repo root is the workspace, not a built package
