[build-system]
requires = ["maturin>=1.7,<2.0"]
build-backend = "maturin"

[project]
name = "haxball_core"
version = "1.0.0"
description = "Headless, vectorized Haxball physics core (RocketSim-equivalent for Haxball)."
requires-python = ">=3.12"
license = "MIT"
license-files = ["LICENSE"]
readme = "README.md"
authors = [{ name = "Wazarr", email = "jeje_04@live.com" }]
keywords = ["haxball", "reinforcement-learning", "physics", "simulation", "rl"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Science/Research",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Rust",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Games/Entertainment :: Simulation",
]
dependencies = ["numpy>=1.23"]   # the core stays dependency-light on purpose

[project.urls]
Homepage = "https://github.com/HaxballGym/HaxballGym"
Repository = "https://github.com/HaxballGym/HaxballGym"
Issues = "https://github.com/HaxballGym/HaxballGym/issues"

[tool.maturin]
features = ["pyo3/extension-module"]
